<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.taes.iair.iair.NovoEventoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="0"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="Título:"
            android:textSize="18sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="0"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="Categoria:"
            android:textSize="18sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="0"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDesc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="Descrição do Evento:"
            android:textSize="18sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:gravity="right"
        android:orientation="vertical">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@color/ic_humidity_background"
            android:onClick="onClickPubEvent"
            android:padding="10dp"
            android:text="Publicar Evento"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
