<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.taes.iair.iair.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:textAlignment="center">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:elevation="0dp"
            android:scaleType="center"
            android:scaleX="2"
            android:scaleY="2"
            app:srcCompat="@mipmap/ic_logo2_foreground" />

        <TextView
            android:id="@+id/textCidadeName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="N/A"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_atm_press_round" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_humidity_round" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_temperature_round" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPressAtm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="N/A"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textViewHumRel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="N/A"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textViewTempAr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="N/A"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"></LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="@color/ic_atm_press_background"
            android:elevation="0dp"
            android:freezesText="false"
            android:includeFontPadding="false"
            android:keyboardNavigationCluster="false"
            android:onClick="onClickLocais"
            android:padding="10dp"
            android:text="Mostrar Outros Locais"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="@color/ic_humidity_background"
            android:elevation="0dp"
            android:freezesText="false"
            android:onClick="onClickSensores"
            android:padding="10dp"
            android:text="Visualizar Informação Sensores"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="@color/ic_humidity_background"
            android:elevation="0dp"
            android:freezesText="false"
            android:onClick="onClickMyLoc"
            android:padding="10dp"
            android:text="Minha Localização"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
