...
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="0"
        android:background="@color/ic_location_background"
        android:onClick="onClickAddEvento"
        android:padding="10dp"
        android:text="Adicionar Evento"
        android:textAlignment="center"
        android:textStyle="bold" />
</LinearLayout>

