<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.taes.iair.iair.LocaisActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/listLocais"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:choiceMode="singleChoice"
            android:descendantFocusability="beforeDescendants"
            tools:listitem="@layout/item_listview_favorito" />
    </LinearLayout>

</LinearLayout>
