...
        android:layout_height="25dp"
        android:orientation="horizontal">

    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:background="@color/ic_atm_press_background"
        android:text="PUBLICAR" />

</LinearLayout>

